--- a/WageTimeBlazor/WageTimeBlazor/_ViewImports.cshtml
+++ b/WageTimeBlazor/WageTimeBlazor/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Threading;
+@using System.Net.Http
 @using Microsoft.AspNetCore.Blazor
 @using Microsoft.AspNetCore.Blazor.Components
 @using Microsoft.AspNetCore.Blazor.Layouts
